# vibeopsOS

./: .gitignore  LICENSE  README.md  install.sh  vibeopsOS.md
package/: vibeops-init.sh  vibeops.service
package/onboarding/: welcome.sh
package/templates/: agents-safe.md  agents-trust.md  agents.md
package/templates/general/: README.md  agents.md
package/templates/python/: agents.md  pyproject.toml
package/templates/web/: agents.md  package.json  tsconfig.json
